<resources>
    <string name="app_name">TA3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GUEST</string>
    <string name="nav_header_subtitle">GuestMail@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Komentar">Komentar</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Dashboard</string>
    <string name="menu_slideshow">Vidio</string>
    <string name="Login">Login</string>
    <string name="nav_news">Navigation News</string>
    <string name="home_second">Home Second</string>
    <string name="HN1">Ledakkan di menteng sisakan Misteri Bagi Pelaku</string>
    <string name="kosong"></string>
    <string name="publish">Publish</string>
    <string name="load">Load More</string>
    <string name="Email">EMail</string>
    <string name="password">Password</string>
    <string name="Masuk">Masuk</string>
    <string name="Daftra">Daftar</string>

    <string name="isiBerita">Jakarta - Ledakan terjadi di Menteng, Jakarta Pusat. Pihak kepolisian hingga kini masih memburu pelaku peledakan tersebut.
Ledakan terjadi tepatnya di Jalan Yusuf Adiwinata, Menteng, Jakarta Pusat. Pihak tim Gegana hingga Puslabfor Polres Metro Jakarta Pusat sempat menyusuri lokasi kejadian.

Polisi pun menyebut ledakan yang terjadi di Menteng, Jakarta Pusat (Jakpus) berasal dari sejenis petasan. Salah satu kendaraan dekat lokasi juga terkena dampak akibat ledakan tersebut.</string>
</resources>
